CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

PROJECT(OpenFLUID-LandR CXX)

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake;${CMAKE_MODULE_PATH}")

FIND_PACKAGE(OpenFLUID COMPONENTS base core tools)

INCLUDE(CMake.in.cmake)


IF(NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE "Debug")
  SET(CMAKE_INSTALL_PREFIX "${OFLANDR_DIST_PATH}")
ENDIF()

IF(CMAKE_BUILD_TYPE MATCHES "Debug" OR CMAKE_BUILD_TYPE MATCHES "RelWithDebInfo")
  IF(NOT DEFINED OFLANDR_ENABLE_TESTING)
    SET(OFLANDR_ENABLE_TESTING ON)
  ENDIF()
ENDIF()


ADD_SUBDIRECTORY(src)

STRING(TOUPPER ${CMAKE_BUILD_TYPE} OFLANDR_BUILD_TYPE)

MESSAGE(STATUS "****************************************")
MESSAGE(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
MESSAGE(STATUS "Compiler: ${CMAKE_CXX_COMPILER}")
MESSAGE(STATUS "Compilation flags for ${CMAKE_BUILD_TYPE}: ${CMAKE_CXX_FLAGS_${OFLANDR_BUILD_TYPE}} ${CMAKE_CXX_FLAGS}")
MESSAGE(STATUS "Install prefix: ${CMAKE_INSTALL_PREFIX}")
MESSAGE(STATUS "OpenFLUID version: ${OpenFLUID_VERSION}")
MESSAGE(STATUS "****************************************")