#INCLUDE_DIRECTORIES("${PROJECT_BINARY_DIR}/src/tests")

SET(UNITTEST_LINK_LIBRARIES openfluid-core openfluid-base openfluid-landr ${GDAL_LIBRARIES} ${GEOS_LIBRARY})

#OFBUILD_DISCOVER_UNITTESTS(landr)


MACRO(OFLANDR_ADD_UNITTEST TEST_CAT TEST_NAME)
  ADD_EXECUTABLE("${TEST_CAT}-${TEST_NAME}" ${ARGN})
  TARGET_LINK_LIBRARIES("${TEST_CAT}-${TEST_NAME}"
                       ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
                       ${GDAL_LIBRARIES} ${GEOS_LIBRARY}
                       ${OpenFLUID_LIBRARIES}
                       openfluid-landr)
  SET_TARGET_PROPERTIES("${TEST_CAT}-${TEST_NAME}" 
                        PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${OFLANDR_TESTS_BINARY_PATH}")
  ADD_TEST("unit-${TEST_CAT}-${TEST_NAME}" "${TEST_CAT}-${TEST_NAME}")

#  SET_TESTS_PROPERTIES("unit-${TEST_CAT}-${TEST_NAME}"
#                       PROPERTIES ENVIRONMENT "OPENFLUID_TEMP_PATH=${OFLANDR_TESTS_TEMP_DIR};OPENFLUID_USERDATA_PATH=${OFLANDR_TESTS_USERDATA_DIR}")

  IF(NOT TARGET "unit-${TEST_CAT}-ALLTESTS")
    ADD_CUSTOM_TARGET("unit-${TEST_CAT}-ALLTESTS")
  ENDIF()
  ADD_DEPENDENCIES("unit-${TEST_CAT}-ALLTESTS" "${TEST_CAT}-${TEST_NAME}")

ENDMACRO()


MACRO(OFLANDR_DISCOVER_UNITTESTS TEST_CAT)
  FILE(GLOB UNIT_TESTS_CPP *_TEST.cpp)
  FOREACH(CPPFILE ${UNIT_TESTS_CPP})
    GET_FILENAME_COMPONENT(CPPFILE_WE ${CPPFILE} NAME_WE)
    OFLANDR_ADD_UNITTEST(${TEST_CAT} ${CPPFILE_WE} ${CPPFILE})
  ENDFOREACH()
ENDMACRO()


###########################################################################

FIND_PACKAGE(Boost 1.61 REQUIRED COMPONENTS unit_test_framework)

CONFIGURE_FILE(tests-config.hpp.in tests-config.hpp)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

OFLANDR_DISCOVER_UNITTESTS(landr)